src/App/components/Header/style.css
@custom-media --header-desktop (min-width: 768px);

#site-header {  
  & .logo-wrap {
    border-bottom: var(--black-border);
    display: flex;
    padding: var(--s-block-spacing);
    position: relative;
    
    @media(--header-desktop) {
      padding-left: var(--l-block-spacing);
      padding-right: var(--l-block-spacing);
    }
  }

  & .logo {
    display: inline-block;

    @media(--header-desktop) {
      position: relative;
      left: 50%;
      transform: translateX(-50%);
    }

    & img {
      max-width: 180px;

      @media(--header-desktop) {
        max-width: none;
      }
    }
  }

  & .social-icons,
  & .menu-toggle {
    margin-left: auto;
  }

  & .social-icons {
    display: none;

    @media(--header-desktop) {
      align-self: flex-end;
      display: block;
    }

    & a {
      display: inline-block;
      margin-left: 10px;

      &:first-child {
        margin-left: 0;
      }
    }
  }

  & .menu-toggle {
    display: block;
    align-self: center;

    @media(--header-desktop) {
      display: none;
    }

    &.menu-active {
      & .close-icon {
        display: block;
      }

      & .menu-icon {
        display: none;
      }
    }

    & .close-icon {
      display: none;
    }

    & img {
      display: inline-block;
      vertical-align: middle;
    }
  }

  & .search-toggle {
    cursor: pointer;
    display: inline-block;
    vertical-align: bottom;
    margin-left: 25px;
  }

  & nav {
    background-color: inherit;
    border-bottom: 0;
    max-height: 0;
    width: 100%;
    position: absolute;
    top: 60px;
    left: 0;
    overflow: hidden;
    transition: max-height .15s ease-in;

    @media(--header-desktop) {
      background-color: var(--white);
      border-bottom: var(--black-border);
      height: auto;
      position: relative;
      top: 0;
      text-align: center;
    }

    &.menu-active {
      max-height: 9999px;
    }

    & > a,
    & > button {
      color: var(--black);
      display: block;
      font-size: 28px;
      font-weight: normal;
      letter-spacing: -1.57px;
      line-height: 1.61;
      margin: 0 var(--s-block-spacing);
      padding: 0;

      @media(--header-desktop) {
        display: inline-block;
        font-size: 18px;
        letter-spacing: -1.01px;
        padding: 1rem;
        margin: 0;
      }
      
      &:first-child {
        border-top: var(--black-border);
        padding-top: 7px;

        @media(--header-desktop) {
          border-top: 0;
          padding-top: 0;
        }
      }

      &.active {
        font-weight: bold;
      }

      &:hover,
      &:focus {
        text-decoration: underline;
      }
    }

    & > button {
      background-color: transparent;
      border: 0;
      cursor: pointer;
    }

    & .social-icons {
      border-top: var(--black-border);
      border-bottom: var(--black-border);
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 40px var(--s-block-spacing) 0;
      padding: var(--s-block-spacing) 0;

      @media(--header-desktop) {
        display: none;
      }

      & a {
        margin-left: 24px;

        &:first-child {
          margin-left: 0;
        }
      }

      & svg {
        width: 27px;
        height: 27px;
      }
    }
    
    & .search-form {
      margin: 40px var(--s-block-spacing) 0;

      @media(--header-desktop) {
        display: none;
      }

      & input[type="text"] {
        font-size: 28px;
        letter-spacing: -1.57px;
        line-height: 1.61;
      }
    }
  }

}

